# Production-grade-course-tasks

./: README.md
session_02_precision_chunking_and_metadata_enrichment/: README.md
session_02_precision_chunking_and_metadata_enrichment/code/: README_code.md
session_02_precision_chunking_and_metadata_enrichment/code/new production/: Dockerfile  docker-compose.yml  main.py
session_02_precision_chunking_and_metadata_enrichment/code/new production/monitoring/: prometheus.yml
session_02_precision_chunking_and_metadata_enrichment/code/old production/: .dockerignore  .env.example  config.py  main.py  pyproject.toml  requirements.txt
session_02_precision_chunking_and_metadata_enrichment/code/old production/postman/: rag_api.postman_collection.json
session_02_precision_chunking_and_metadata_enrichment/code/old production/routers/: chat.py  compare.py
session_02_precision_chunking_and_metadata_enrichment/code/old production/services/: chunking.py  metrics.py  rag_service.py
session_02_precision_chunking_and_metadata_enrichment/code/old production/tests/: requirements-test.txt
session_02_precision_chunking_and_metadata_enrichment/code/old production/tests/unit/: test_metadata.py
session_02_precision_chunking_and_metadata_enrichment/code/production/: middleware.py  requirements.txt
session_02_precision_chunking_and_metadata_enrichment/code/production/database/: vector_store.py
session_02_precision_chunking_and_metadata_enrichment/code/research/: 01_chunking_strategies_deep_dive.ipynb  02_metadata_enrichment_and_crag.ipynb  instructor.md
(+25 files in other folders)
