[project]
name = "old-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "langchain==1.2.12",
    "langchain-google-genai==4.2.1",
    "langchain-huggingface==1.2.1",
    "langchain-qdrant==1.1.0",
    "langchain-voyageai==0.3.2",
    "numpy>=1.26.0",
    "prometheus-client>=0.20.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.7.0",
    "pymupdf==1.25.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.18",
    "qdrant-client==1.17.1",
    "sentence-transformers==5.3.0",
    "structlog==24.4.0",
    "uvicorn[standard]==0.32.1",
    "voyageai>=0.3.7",
]
